add catalogue.txt using new File